# smm2-level-checker

./: .gcloudignore  .gitignore  LICENSE  README.md  app.yaml  dispatch.yaml  main.py  pyproject.toml  requirements.txt
client/: package-lock.json  package.json  tailwind.config.js  vue.config.js
client/src/: App.vue
client/src/components/: TeamDifficultySelector.vue
client/src/components/input/: NumberRangeInput.vue
client/src/router/: index.js
client/src/util/: graphql.js
client/src/views/: Home.vue  OneLevel.vue  RandomPick.vue
client2/: .local.env  README.md  package-lock.json  package.json  vite.config.js
client2/src/: App.vue
client2/src/components/: LevelDetail.vue  RandomPick.vue  RandomTeamPick.vue
client2/src/plugins/: graphql.js
client2/src/router/: index.js
client2/src/views/: HomeView.vue  LevelDetailView.vue
cloudbuild/: cloudbuild-merge.yaml
server/: app.py  login.py  model.py  schema.py  schema_util.py  script.py  view.py
server2/: app.py  model.py  script.py  storage.py
