[tool.poetry]
name = "smm2-map-checker"
version = "0.1.0"
description = "SMM2 Map Clear Recorder"
authors = ["zhuny <zhuny936772@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
